--- a/themes/dataone/layouts/partials/blocks/logos-bar/logos-bar.scss
+++ b/themes/dataone/layouts/partials/blocks/logos-bar/logos-bar.scss
@@ -46,6 +46,7 @@
     font-weight   : var(--fw-bold);
     margin        : 1rem 0;
     line-height   : 1.32;
+    text-align    : center;
   }
 
   &__logos {
